--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,3 +11,5 @@ $primary-border-bottom: #ececec;
 $primary-company-color: #afb1b8;
 $primary-bg-social: #44454e;
 $card-set-gap: 30px;
+$icons-team-mobile: "teamcardIhorMobile", "teamcardMikhailoMobile",
+  "teamcardMykolaMobile", "teamcardOlhaMobile";
