--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,5 +1,9 @@
 .footer-form {
-  margin-left: 93px;
+  margin-top: 60px;
+
+  @media screen and (min-width: $desktop) {
+    margin-left: 93px;
+  }
 }
 
 .footer-form__title {
@@ -12,20 +16,67 @@
   margin-bottom: 20px;
 
   color: $primary-white-color;
+  @media screen and (min-width: $low-mobile) {
+    display: flex;
+    justify-content: center;
+  }
+  @media screen and (min-width: $mobile) {
+    display: flex;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    justify-content: start;
+  }
 }
 
 .footer-form__posotion-input {
   display: flex;
+
+  @media screen and (min-width: $low-mobile) {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @media screen and (min-width: $mobile) {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @media screen and (min-width: $desktop) {
+    flex-direction: row;
+  }
 }
 
 .footer-form__input {
-  width: 358px;
+  height: 50px;
   background-color: $secondary-bg-color;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   padding-left: 16px;
   color: $primary-white-color;
+
+  @media screen and (min-width: $low-mobile) {
+    margin-bottom: 20px;
+    width: 250px;
+  }
+
+  @media screen and (min-width: $mobile) {
+    margin-bottom: 20px;
+    width: 358px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 20px;
+    width: 450px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 0;
+    width: 358px;
+  }
 }
 
 .footer-form__input:focus-within {
@@ -36,7 +87,7 @@
   @extend %centeredFlex;
 
   width: 200px;
-  margin-left: 12px;
+
   padding: 10px 28px;
 
   font-weight: 700;
@@ -51,6 +102,10 @@
   background-color: $accent-text-color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+
+  @media screen and (min-width: $desktop) {
+    margin-left: 12px;
+  }
 }
 
 .footer-form__icon {
