--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -8,27 +8,78 @@
 
 .page-footer__position {
   display: flex;
-  flex-direction: row;
-  align-items: baseline;
+
+  @media screen and (min-width: $low-mobile) {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @media screen and (min-width: $mobile) {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @media screen and (min-width: $tablet) {
+    flex-flow: row wrap;
+    justify-content: space-around;
+
+    align-items: baseline;
+  }
+
+  @media screen and (min-width: $desktop) {
+    flex-direction: row;
+    align-items: baseline;
+  }
 }
 
 .page-footer__position-address {
   display: flex;
   flex-direction: column;
+
+  @media screen and (min-width: $low-mobile) {
+    align-items: center;
+  }
+
+  @media screen and (min-width: $mobile) {
+    align-items: center;
+  }
+
+  @media screen and (min-width: $desktop) {
+    align-items: flex-start;
+  }
 }
 
 .page-footer__site-name {
   display: inline-block;
   font-family: "Raleway";
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
   text-decoration: none;
   margin-bottom: 20px;
-  width: 145px;
   letter-spacing: 0.03em;
 
   color: $primary-white-color;
+
+  @media screen and (min-width: $low-mobile) {
+    width: 154px;
+    font-size: 24px;
+    line-height: 1.16;
+    display: flex;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: $mobile) {
+    width: 154px;
+    font-size: 24px;
+    line-height: 1.16;
+    display: flex;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 145px;
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .page-footer__color-name-site {
@@ -36,8 +87,22 @@
 }
 
 .page-footer__address {
+  display: flex;
+  flex-direction: column;
   width: 230px;
   font-style: normal;
+
+  @media screen and (min-width: $low-mobile) {
+    align-items: center;
+  }
+
+  @media screen and (min-width: $mobile) {
+    align-items: center;
+  }
+
+  @media screen and (min-width: $desktop) {
+    align-items: flex-start;
+  }
 }
 
 .page-footer__office {
@@ -80,7 +145,14 @@
 .page-footer__social {
   display: flex;
   flex-direction: column;
-  margin-left: 70px;
+  margin-top: 60px;
+
+  @media screen and (min-width: $tablet) {
+    margin-top: 0;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-left: 70px;
+  }
 }
 
 .page-footer__social-title {
@@ -92,6 +164,21 @@
   margin-bottom: 20px;
 
   color: $primary-white-color;
+
+  @media screen and (min-width: $low-mobile) {
+    display: flex;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: $mobile) {
+    display: flex;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    justify-content: start;
+  }
 }
 
 .page-footer__social-links {
