--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,86 +1,134 @@
 .header__name-site {
   font-family: "Raleway";
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+
   letter-spacing: 0.03em;
   text-decoration: none;
 
   color: $primary-black-color;
+
+  @media screen and (min-width: $low-mobile) {
+    font-size: 24px;
+    line-height: 1.16;
+    padding: 16px 0;
+    display: inline-block;
+  }
+
+  @media screen and (min-width: $mobile) {
+    font-size: 24px;
+    line-height: 1.16;
+    padding: 16px 0;
+    display: inline-block;
+  }
+
+  @media screen and (min-width: $desktop) {
+    font-size: 26px;
+    line-height: 1.19;
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .header__name-color {
   color: $accent-text-color;
 }
 
+.reviews-a {
+  @media screen and (max-width: $tablet) {
+    display: none;
+  }
+}
+
 .header__nav {
-  margin-left: 90px;
+  @media screen and (min-width: $mobile) {
+    margin-left: 87px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-left: 90px;
+  }
 }
 
 .nav__list {
-  display: flex;
-  flex-direction: row;
-  list-style: none;
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
 
-  gap: 50px;
+    gap: 50px;
+  }
 }
 
 .nav__link {
-  position: relative;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  list-style: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  text-decoration: none;
+  @media screen and (min-width: $tablet) {
+    position: relative;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    list-style: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
 
-  color: $primary-text-color;
+    color: $primary-text-color;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:hover,
-  &:focus {
-    color: $accent-text-color;
+    &:hover,
+    &:focus {
+      color: $accent-text-color;
+    }
   }
 }
 
 .current {
-  color: $accent-text-color;
+  @media screen and (min-width: $tablet) {
+    color: $accent-text-color;
 
-  &::after {
-    position: absolute;
-    bottom: 0;
-    right: 0px;
-    content: "";
-    width: 100%;
-    height: 4px;
-    background-color: $accent-text-color;
-    border-radius: 2px;
+    &::after {
+      position: absolute;
+      bottom: 0;
+      right: 0px;
+      content: "";
+      width: 100%;
+      height: 4px;
+      background-color: $accent-text-color;
+      border-radius: 2px;
+    }
   }
 }
 
 .header__cont {
-  display: flex;
-  flex-direction: row;
-  margin-left: auto;
-  gap: 50px;
   list-style: none;
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-direction: column;
+    margin-left: 96px;
+  }
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    flex-direction: row;
+    margin-left: auto;
+    gap: 50px;
+  }
+}
+
+.cont__item:last-child {
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 0;
+  }
 }
 
 .cont__header-mail,
 .cont__header-tel {
   display: flex;
-  align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  text-decoration: none;
+  align-items: flex-end;
+
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
   letter-spacing: 0.02em;
+  text-decoration: none;
 
   color: $secondary-text-color;
   fill: $secondary-text-color;
@@ -93,17 +141,40 @@
     color: $accent-text-color;
     fill: $accent-text-color;
   }
+  @media screen and (min-width: $tablet) {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    margin-bottom: 0;
+
+    font-size: 14px;
+    line-height: 1.14;
+  }
+
+  .cont__mail-icon {
+    margin-bottom: 2px;
+    margin-right: 10px;
+    width: 16px;
+    height: 12px;
+  }
+
+  .cont__tel-icon {
+    margin-right: 10px;
+    width: 10px;
+    height: 16px;
+  }
 }
 
-.cont__mail-icon {
-  margin-bottom: 2px;
-  margin-right: 10px;
-  width: 16px;
-  height: 12px;
-}
+.cont__header-mail {
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 10px;
+  }
 
-.cont__tel-icon {
-  margin-right: 10px;
-  width: 10px;
-  height: 16px;
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 0;
+  }
 }
