--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -7,6 +7,8 @@
 
   background: rgba(0, 0, 0, 0.2);
 
+  overflow-y: scroll;
+
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -25,8 +27,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
+
   padding: 40px;
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -35,6 +36,20 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  @media screen and (min-width: $low-mobile) {
+    width: 290px;
+    height: 609px;
+  }
+  @media screen and (min-width: $mobile) {
+    width: 450px;
+    height: 609px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .modal__btn {
@@ -184,25 +199,34 @@
 
   border: 2px solid $primary-text-color;
   border-radius: 4px;
+
+  @media screen and (max-width: $low-mobile) {
+    width: 20px;
+    height: 13px;
+  }
 }
 
 .form__label-police {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7;
+
   letter-spacing: 0.03em;
   margin-left: 7px;
 
   color: $secondary-text-color;
-}
+  @media screen and (min-width: $low-mobile) {
+    font-size: 12px;
+    line-height: 1.16;
+  }
 
-.form__link-police {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
+  @media screen and (min-width: $mobile) {
+    font-size: 12px;
+    line-height: 1.16;
+  }
 
-  color: $accent-text-color;
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
+    line-height: 1.7;
+  }
 }
 
 .form__field-btn {
