--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,13 +1,37 @@
 .box-team-description {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  @media screen and (min-width: $low-mobile) {
+    padding-top: 30px;
+    padding-bottom: 24px;
+  }
+
+  @media screen and (min-width: $mobile) {
+    padding-top: 30px;
+    padding-bottom: 24px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
-
   background-color: $primary-bg-color;
+
+  @media screen and (min-width: $low-mobile) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  @media screen and (min-width: $mobile) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .team__title {
@@ -21,11 +45,33 @@
 }
 
 .team__list {
-  margin-top: 50px;
   display: flex;
-  flex-direction: row;
-  gap: 30px;
+  flex-direction: column;
   list-style: none;
+
+  gap: 30px;
+
+  @media screen and (min-width: $low-mobile) {
+    margin-top: 30px;
+  }
+
+  @media screen and (min-width: $mobile) {
+    margin-top: 30px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    flex-direction: row;
+    display: flex;
+    flex-wrap: wrap;
+
+    margin-top: 30px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    flex-direction: row;
+    margin-top: 50px;
+    flex-wrap: nowrap;
+  }
 }
 
 .team__item {
@@ -35,10 +81,36 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+  @media screen and (min-width: $low-mobile) {
+    width: 100%;
+  }
+
+  @media screen and (min-width: $mobile) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    width: 354px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-basis: calc(100% / 3);
+    width: 50%;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 270px;
+    flex-basis: calc(100% / 4);
+    justify-content: center;
+  }
 }
 
 .team__photo {
   display: block;
+  @media screen and (max-width: $mobile) {
+    width: 100%;
+  }
 }
 
 .team__name {
