--- a/css/main.css
+++ b/css/main.css
@@ -788,7 +788,7 @@ body {
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../../images/headeroverlayMobile2x.jpg");
+    background-image: url("../images/headeroverlayMobile2x.jpg");
   }
 }
 @media screen and (min-width: 320px) {
@@ -819,7 +819,7 @@ body {
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../../images/headeroverlayTablet2x.jpg");
+    background-image: url("../images/headeroverlayTablet2x.jpg");
   }
 }
 @media screen and (min-width: 1200px) {
@@ -834,7 +834,7 @@ body {
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../../images/headeroverlay2x.jpg");
+    background-image: url("../images/headeroverlay2x.jpg");
   }
 }
 
