--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -17,7 +17,7 @@
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     & {
-      background-image: url("../../images/headeroverlayMobile2x.jpg");
+      background-image: url("../images/headeroverlayMobile2x.jpg");
     }
   }
 
@@ -54,7 +54,7 @@
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
       & {
-        background-image: url("../../images/headeroverlayTablet2x.jpg");
+        background-image: url("../images/headeroverlayTablet2x.jpg");
       }
     }
   }
@@ -76,7 +76,7 @@
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
       & {
-        background-image: url("../../images/headeroverlay2x.jpg");
+        background-image: url("../images/headeroverlay2x.jpg");
       }
     }
   }
