--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -17,7 +17,12 @@
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     & {
-      background-image: url("../images/headeroverlayMobile2x.jpg");
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../images/headeroverlayMobile2x.jpg");
     }
   }
 
@@ -54,7 +59,12 @@
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
       & {
-        background-image: url("../images/headeroverlayTablet2x.jpg");
+        background-image: linear-gradient(
+            to right,
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)
+          ),
+          url("../images/headeroverlayTablet2x.jpg");
       }
     }
   }
@@ -76,7 +86,12 @@
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
       & {
-        background-image: url("../images/headeroverlay2x.jpg");
+        background-image: linear-gradient(
+            to right,
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)
+          ),
+          url("../images/headeroverlay2x.jpg");
       }
     }
   }
