--- a/css/main.css
+++ b/css/main.css
@@ -424,6 +424,9 @@ body {
   background-color: #ffffff;
   color: #212121;
 }
+body.modal-open {
+  overflow: hidden;
+}
 
 .header__name-site {
   font-family: "Raleway";
@@ -433,14 +436,6 @@ body {
   color: #000000;
 }
 @media screen and (min-width: 320px) {
-  .header__name-site {
-    font-size: 24px;
-    line-height: 1.16;
-    padding: 16px 0;
-    display: inline-block;
-  }
-}
-@media screen and (min-width: 480px) {
   .header__name-site {
     font-size: 24px;
     line-height: 1.16;
@@ -546,9 +541,6 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .header__cont {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -617,14 +609,9 @@ body {
   height: 16px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199.9px) {
   .cont__header-mail {
     margin-bottom: 10px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .cont__header-mail {
-    margin-bottom: 0;
   }
 }
 
@@ -776,6 +763,9 @@ body {
 }
 
 .hero {
+  height: 400px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -795,25 +785,16 @@ body {
 @media screen and (min-width: 320px) {
   .hero {
     max-width: 480px;
-    height: 400px;
-    padding-top: 118px;
-    padding-bottom: 118px;
   }
 }
 @media screen and (min-width: 480px) {
   .hero {
     max-width: 480px;
-    height: 400px;
-    padding-top: 118px;
-    padding-bottom: 118px;
   }
 }
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 768px;
-    height: 400px;
-    padding-top: 118px;
-    padding-bottom: 118px;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/headeroverlayTablet.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/headeroverlayTablet.jpg);
   }
@@ -845,23 +826,13 @@ body {
   margin-left: auto;
   margin-right: auto;
   font-weight: 900;
+  font-size: 26px;
+  line-height: 1.6;
   letter-spacing: 0.06em;
   margin-bottom: 30px;
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
-}
-@media screen and (min-width: 320px) {
-  .hero__title {
-    font-size: 26px;
-    line-height: 1.6;
-  }
-}
-@media screen and (min-width: 480px) {
-  .hero__title {
-    font-size: 26px;
-    line-height: 1.6;
-  }
 }
 @media screen and (min-width: 1200px) {
   .hero__title {
@@ -891,18 +862,8 @@ body {
 
 .features {
   background-color: #ffffff;
-}
-@media screen and (min-width: 320px) {
-  .features {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-}
-@media screen and (min-width: 480px) {
-  .features {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 @media screen and (min-width: 1200px) {
   .features {
@@ -915,32 +876,17 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   list-style: none;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 768px) and (max-width: 1199.9px) {
   .features__list {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-@media screen and (min-width: 480px) {
-  .features__list {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-@media screen and (min-width: 768px) {
-  .features__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -webkit-box-orient: horizontal;
@@ -957,8 +903,6 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    margin-left: 0;
-    margin-bottom: 0;
     gap: 30px;
   }
 }
@@ -1091,17 +1035,9 @@ body {
   color: #ffffff;
 }
 
-@media screen and (min-width: 320px) {
-  .box-team-description {
-    padding-top: 30px;
-    padding-bottom: 24px;
-  }
-}
-@media screen and (min-width: 480px) {
-  .box-team-description {
-    padding-top: 30px;
-    padding-bottom: 24px;
-  }
+.box-team-description {
+  padding-top: 30px;
+  padding-bottom: 24px;
 }
 @media screen and (min-width: 1200px) {
   .box-team-description {
@@ -1111,19 +1047,9 @@ body {
 }
 
 .team {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #f5f4fa;
-}
-@media screen and (min-width: 320px) {
-  .team {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-}
-@media screen and (min-width: 480px) {
-  .team {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
 }
 @media screen and (min-width: 1200px) {
   .team {
@@ -1150,17 +1076,8 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   list-style: none;
+  margin-top: 30px;
   gap: 30px;
-}
-@media screen and (min-width: 320px) {
-  .team__list {
-    margin-top: 30px;
-  }
-}
-@media screen and (min-width: 480px) {
-  .team__list {
-    margin-top: 30px;
-  }
 }
 @media screen and (min-width: 768px) {
   .team__list {
@@ -1168,20 +1085,12 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin-top: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
   .team__list {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
     margin-top: 50px;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
@@ -1189,7 +1098,6 @@ body {
 }
 
 .team__item {
-  width: 270px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1226,9 +1134,6 @@ body {
     width: 270px;
     -ms-flex-preferred-size: 25%;
         flex-basis: 25%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
   }
 }
 
@@ -1298,15 +1203,8 @@ body {
   height: 20px;
 }
 
-@media screen and (min-width: 320px) {
-  .clients {
-    padding: 60px 0;
-  }
-}
-@media screen and (min-width: 480px) {
-  .clients {
-    padding: 60px 0;
-  }
+.clients {
+  padding: 60px 0;
 }
 @media screen and (min-width: 1200px) {
   .clients {
@@ -1324,66 +1222,45 @@ body {
 }
 
 .clients__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 30px;
   list-style: none;
 }
 @media screen and (min-width: 320px) {
   .clients__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin-top: 30px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 1199.9px) {
   .clients__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin-top: 30px;
     margin-left: -30px;
     margin-bottom: -30px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .clients__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin-left: -30px;
-    margin-bottom: -30px;
-    margin-top: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
   .clients__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
     margin-top: 50px;
-    margin-left: 0;
-    margin-bottom: 0;
     gap: 30px;
   }
 }
 
-@media screen and (min-width: 320px) {
+.clients__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+@media screen and (min-width: 320px) and (max-width: 1199.9px) {
   .clients__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
     -ms-flex-preferred-size: calc(50% - 30px);
         flex-basis: calc(50% - 30px);
     width: 50%;
@@ -1391,44 +1268,33 @@ body {
     margin-bottom: 30px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 1199.9px) {
   .clients__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
     -ms-flex-preferred-size: calc(50% - 30px);
         flex-basis: calc(50% - 30px);
-    width: 50%;
     margin-left: 30px;
-    margin-bottom: 30px;
   }
 }
 @media screen and (min-width: 768px) {
   .clients__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -ms-flex-preferred-size: calc(33.3333333333% - 30px);
         flex-basis: calc(33.3333333333% - 30px);
-    width: 50%;
-    margin-left: 30px;
-    margin-bottom: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
   .clients__item {
-    margin-left: 0;
-    margin-bottom: 0;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
 }
 
 .clients__link {
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  width: 210px;
   height: 92px;
   color: #afb1b8;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1437,16 +1303,6 @@ body {
 .clients__link:hover, .clients__link:focus {
   border-color: #2196f3;
   color: #2196f3;
-}
-@media screen and (min-width: 320px) {
-  .clients__link {
-    width: 210px;
-  }
-}
-@media screen and (min-width: 480px) {
-  .clients__link {
-    width: 210px;
-  }
 }
 @media screen and (min-width: 1200px) {
   .clients__link {
@@ -1468,28 +1324,13 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-@media screen and (min-width: 320px) {
-  .page-footer__position {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-@media screen and (min-width: 480px) {
-  .page-footer__position {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 @media screen and (min-width: 768px) {
   .page-footer__position {
@@ -1510,9 +1351,6 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
   }
 }
 
@@ -1524,20 +1362,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-@media screen and (min-width: 320px) {
-  .page-footer__position-address {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-@media screen and (min-width: 480px) {
-  .page-footer__position-address {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 @media screen and (min-width: 1200px) {
   .page-footer__position-address {
@@ -1557,19 +1384,6 @@ body {
   color: #ffffff;
 }
 @media screen and (min-width: 320px) {
-  .page-footer__site-name {
-    width: 154px;
-    font-size: 24px;
-    line-height: 1.16;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-@media screen and (min-width: 480px) {
   .page-footer__site-name {
     width: 154px;
     font-size: 24px;
@@ -1602,22 +1416,11 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 230px;
   font-style: normal;
-}
-@media screen and (min-width: 320px) {
-  .page-footer__address {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-@media screen and (min-width: 480px) {
-  .page-footer__address {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
 }
 @media screen and (min-width: 1200px) {
   .page-footer__address {
@@ -1683,6 +1486,12 @@ body {
 }
 
 .page-footer__social-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -1691,31 +1500,8 @@ body {
   margin-bottom: 20px;
   color: #ffffff;
 }
-@media screen and (min-width: 320px) {
-  .page-footer__social-title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-@media screen and (min-width: 480px) {
-  .page-footer__social-title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
 @media screen and (min-width: 1200px) {
   .page-footer__social-title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: start;
@@ -1774,34 +1560,17 @@ body {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 20px;
   color: #ffffff;
 }
-@media screen and (min-width: 320px) {
-  .footer-form__title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-@media screen and (min-width: 480px) {
-  .footer-form__title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
 @media screen and (min-width: 1200px) {
   .footer-form__title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: start;
@@ -1812,28 +1581,13 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-@media screen and (min-width: 320px) {
-  .footer-form__posotion-input {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-@media screen and (min-width: 480px) {
-  .footer-form__posotion-input {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 @media screen and (min-width: 1200px) {
   .footer-form__posotion-input {
@@ -1845,37 +1599,30 @@ body {
 }
 
 .footer-form__input {
+  width: 358px;
   height: 50px;
-  background-color: #2f303a;
+  margin-bottom: 20px;
+  padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  padding-left: 16px;
+  background-color: #2f303a;
   color: #ffffff;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 479.9px) {
   .footer-form__input {
-    margin-bottom: 20px;
     width: 250px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) and (max-width: 1199.9px) {
   .footer-form__input {
-    margin-bottom: 20px;
-    width: 358px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .footer-form__input {
-    margin-bottom: 20px;
     width: 450px;
   }
 }
 @media screen and (min-width: 1200px) {
   .footer-form__input {
     margin-bottom: 0;
-    width: 358px;
   }
 }
 
@@ -1938,11 +1685,12 @@ body {
   left: 50%;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
-  padding: 40px;
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  height: 609px;
+  padding: 40px;
   background: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1951,13 +1699,11 @@ body {
 @media screen and (min-width: 320px) {
   .modal {
     width: 290px;
-    height: 609px;
   }
 }
 @media screen and (min-width: 480px) {
   .modal {
     width: 450px;
-    height: 609px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -2142,21 +1888,11 @@ body {
 
 .form__label-police {
   font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   margin-left: 7px;
   color: #757575;
-}
-@media screen and (min-width: 320px) {
-  .form__label-police {
-    font-size: 12px;
-    line-height: 1.16;
-  }
-}
-@media screen and (min-width: 480px) {
-  .form__label-police {
-    font-size: 12px;
-    line-height: 1.16;
-  }
 }
 @media screen and (min-width: 1200px) {
   .form__label-police {
