--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -424,6 +424,9 @@ body {
   background-color: #ffffff;
   color: #212121;
 }
+body.modal-open {
+  overflow: hidden;
+}
 
 .header-border-botoom {
   border-bottom: 1px solid #ececec;
@@ -437,14 +440,6 @@ body {
   color: #000000;
 }
 @media screen and (min-width: 320px) {
-  .header__name-site {
-    font-size: 24px;
-    line-height: 1.16;
-    padding: 16px 0;
-    display: inline-block;
-  }
-}
-@media screen and (min-width: 480px) {
   .header__name-site {
     font-size: 24px;
     line-height: 1.16;
@@ -550,9 +545,6 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .header__cont {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -621,14 +613,9 @@ body {
   height: 16px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199.9px) {
   .cont__header-mail {
     margin-bottom: 10px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .cont__header-mail {
-    margin-bottom: 0;
   }
 }
 
@@ -789,28 +776,13 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-@media screen and (min-width: 320px) {
-  .page-footer__position {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-@media screen and (min-width: 480px) {
-  .page-footer__position {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 @media screen and (min-width: 768px) {
   .page-footer__position {
@@ -831,9 +803,6 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
   }
 }
 
@@ -845,20 +814,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-@media screen and (min-width: 320px) {
-  .page-footer__position-address {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-@media screen and (min-width: 480px) {
-  .page-footer__position-address {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 @media screen and (min-width: 1200px) {
   .page-footer__position-address {
@@ -878,19 +836,6 @@ body {
   color: #ffffff;
 }
 @media screen and (min-width: 320px) {
-  .page-footer__site-name {
-    width: 154px;
-    font-size: 24px;
-    line-height: 1.16;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-@media screen and (min-width: 480px) {
   .page-footer__site-name {
     width: 154px;
     font-size: 24px;
@@ -923,22 +868,11 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 230px;
   font-style: normal;
-}
-@media screen and (min-width: 320px) {
-  .page-footer__address {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-@media screen and (min-width: 480px) {
-  .page-footer__address {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
 }
 @media screen and (min-width: 1200px) {
   .page-footer__address {
@@ -1004,6 +938,12 @@ body {
 }
 
 .page-footer__social-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -1012,31 +952,8 @@ body {
   margin-bottom: 20px;
   color: #ffffff;
 }
-@media screen and (min-width: 320px) {
-  .page-footer__social-title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-@media screen and (min-width: 480px) {
-  .page-footer__social-title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
 @media screen and (min-width: 1200px) {
   .page-footer__social-title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: start;
@@ -1095,34 +1012,17 @@ body {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 20px;
   color: #ffffff;
 }
-@media screen and (min-width: 320px) {
-  .footer-form__title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-@media screen and (min-width: 480px) {
-  .footer-form__title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
 @media screen and (min-width: 1200px) {
   .footer-form__title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: start;
@@ -1133,28 +1033,13 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-@media screen and (min-width: 320px) {
-  .footer-form__posotion-input {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-@media screen and (min-width: 480px) {
-  .footer-form__posotion-input {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 @media screen and (min-width: 1200px) {
   .footer-form__posotion-input {
@@ -1166,37 +1051,30 @@ body {
 }
 
 .footer-form__input {
+  width: 358px;
   height: 50px;
-  background-color: #2f303a;
+  margin-bottom: 20px;
+  padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  padding-left: 16px;
+  background-color: #2f303a;
   color: #ffffff;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 479.9px) {
   .footer-form__input {
-    margin-bottom: 20px;
     width: 250px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) and (max-width: 1199.9px) {
   .footer-form__input {
-    margin-bottom: 20px;
-    width: 358px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .footer-form__input {
-    margin-bottom: 20px;
     width: 450px;
   }
 }
 @media screen and (min-width: 1200px) {
   .footer-form__input {
     margin-bottom: 0;
-    width: 358px;
   }
 }
 
