--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,11 +1,5 @@
 .clients {
-  @media screen and (min-width: $low-mobile) {
-    padding: 60px 0;
-  }
-
-  @media screen and (min-width: $mobile) {
-    padding: 60px 0;
-  }
+  padding: 60px 0;
 
   @media screen and (min-width: $desktop) {
     padding: 94px 0;
@@ -23,71 +17,50 @@
 }
 
 .clients__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 30px;
   list-style: none;
 
   @media screen and (min-width: $low-mobile) {
-    display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 30px;
   }
 
-  @media screen and (min-width: $mobile) {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 30px;
+  @media screen and (min-width: $mobile) and (max-width: 1199.9px) {
     margin-left: -30px;
     margin-bottom: -30px;
-  }
-  @media screen and (min-width: $tablet) {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-bottom: -30px;
-    margin-top: 30px;
   }
 
   @media screen and (min-width: $desktop) {
-    display: flex;
     flex-wrap: nowrap;
     margin-top: 50px;
-    margin-left: 0;
-    margin-bottom: 0;
     gap: 30px;
   }
 }
 
 .clients__item {
-  @media screen and (min-width: $low-mobile) {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
+
+  @media screen and (min-width: $low-mobile) and (max-width: 1199.9px) {
     flex-basis: calc(100% / 2 - 30px);
     width: 50%;
     margin-left: 10px;
     margin-bottom: 30px;
   }
 
-  @media screen and (min-width: $mobile) {
-    display: flex;
-    flex-wrap: wrap;
+  @media screen and (min-width: $mobile) and (max-width: 1199.9px) {
     flex-basis: calc(100% / 2 - 30px);
-    width: 50%;
     margin-left: 30px;
-    margin-bottom: 30px;
   }
 
   @media screen and (min-width: $tablet) {
-    display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
     flex-basis: calc(100% / 3 - 30px);
-    width: 50%;
-    margin-left: 30px;
-    margin-bottom: 30px;
   }
 
   @media screen and (min-width: $desktop) {
-    margin-left: 0;
-    margin-bottom: 0;
+    flex-wrap: nowrap;
   }
 }
 
@@ -95,7 +68,7 @@
   @extend %centeredFlex;
   border: 1px solid $primary-company-color;
   border-radius: 4px;
-
+  width: 210px;
   height: 92px;
   color: $primary-company-color;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -107,13 +80,6 @@
     color: $accent-text-color;
   }
 
-  @media screen and (min-width: $low-mobile) {
-    width: 210px;
-  }
-
-  @media screen and (min-width: $mobile) {
-    width: 210px;
-  }
   @media screen and (min-width: $desktop) {
     width: 170px;
   }
