--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,15 +1,7 @@
 .features {
   background-color: $primary-white-color;
-
-  @media screen and (min-width: $low-mobile) {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-
-  @media screen and (min-width: $mobile) {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+  padding-top: 60px;
+  padding-bottom: 60px;
 
   @media screen and (min-width: $desktop) {
     padding-top: 94px;
@@ -19,19 +11,11 @@
 
 .features__list {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   list-style: none;
 
-  @media screen and (min-width: $low-mobile) {
-    flex-direction: column;
-  }
-
-  @media screen and (min-width: $mobile) {
-    flex-direction: column;
-  }
-
-  @media screen and (min-width: $tablet) {
-    display: flex;
+  @media screen and (min-width: $tablet) and (max-width: 1199.9px) {
     flex-wrap: wrap;
     flex-direction: row;
     margin-left: -30px;
@@ -40,8 +24,6 @@
 
   @media screen and (min-width: $desktop) {
     flex-direction: row;
-    margin-left: 0;
-    margin-bottom: 0;
     gap: 30px;
   }
 }
@@ -77,9 +59,6 @@
   margin-bottom: 30px;
   height: 120px;
   @extend %centeredFlex;
-
-  @media screen and (min-width: $low-mobile) {
-  }
 
   @media screen and (min-width: $mobile) {
     width: 450px;
