--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -62,12 +62,16 @@
     color: $accent-text-color;
   }
 }
+.position__cont-social {
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - 284px);
+}
 
 .mobile-cont {
-  list-style: none;
-  margin-top: 306px;
+  margin-top: auto;
   margin-left: 40px;
-
+  list-style: none;
   &__item {
     margin-bottom: 32px;
   }
@@ -118,7 +122,7 @@
   &__item:last-child {
     border-right: none;
   }
-  @media screen and (max-width: $low-mobile) {
+  @media screen and (max-width: 435px) {
     flex-direction: row;
     display: flex;
     flex-wrap: wrap;
