--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -91,11 +91,12 @@
 .hero__title {
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 30px;
+  margin-top: 0;
   font-weight: 900;
   font-size: 26px;
   line-height: 1.6;
   letter-spacing: 0.06em;
-  margin-bottom: 30px;
 
   text-align: center;
   text-transform: uppercase;
