--- a/css/main.css
+++ b/css/main.css
@@ -628,7 +628,6 @@ body.modal-open {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #ffffff;
-  overflow-y: scroll;
 }
 .mobile-menu.is-open {
   -webkit-transform: translateX(0);
@@ -737,37 +736,42 @@ body.modal-open {
 .mobile-social__item:last-child {
   border-right: none;
 }
-@media screen and (max-width: 435px) {
+@media screen and (max-width: 445px) {
   .mobile-social {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
   .mobile-social__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
     -ms-flex-preferred-size: 33.3333333333%;
         flex-basis: 33.3333333333%;
-    width: 50%;
-    margin-right: 20px;
+    margin-right: 40px;
     margin-bottom: 20px;
   }
+}
+@media screen and (max-width: 445px) and (max-width: 382px) {
+  .mobile-social__item {
+    margin-right: 10px;
+  }
+}
+@media screen and (max-width: 445px) {
   .mobile-social__item:nth-child(2) {
     border: none;
   }
+}
+@media screen and (max-width: 445px) {
   .mobile-social__item:nth-child(3) {
     padding-right: 4px;
     margin-bottom: 0;
   }
+}
+@media screen and (max-width: 445px) {
   .mobile-social__item:nth-child(4) {
     margin-bottom: 0;
   }
@@ -1736,7 +1740,7 @@ body.modal-open {
 }
 @media screen and (min-width: 320px) {
   .modal {
-    width: 290px;
+    width: auto;
   }
 }
 @media screen and (min-width: 480px) {
