--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -37,7 +37,7 @@
   border-radius: 4px;
 
   @media screen and (min-width: $low-mobile) {
-    width: 290px;
+    width: auto;
   }
   @media screen and (min-width: $mobile) {
     width: 450px;
