--- a/css/main.css
+++ b/css/main.css
@@ -580,14 +580,14 @@ body.modal-open {
 }
 @media screen and (min-width: 768px) {
   .cont__header-mail,
-.cont__header-tel {
+  .cont__header-tel {
     font-size: 12px;
     line-height: 1.16;
   }
 }
 @media screen and (min-width: 1200px) {
   .cont__header-mail,
-.cont__header-tel {
+  .cont__header-tel {
     padding-top: 32px;
     padding-bottom: 32px;
     margin-bottom: 0;
@@ -957,6 +957,8 @@ body.modal-open {
   .features__item {
     -ms-flex-preferred-size: 270px;
         flex-basis: 270px;
+    -ms-flex-line-pack: start;
+        align-content: flex-start;
     margin-left: 0;
     margin-bottom: 0;
   }
